delete: junk file from gateway